--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="container">
-        <h1>Habit Tracker</h1>
+        <h1>HabiTracker</h1>
         
         <div class="add-habit-container">
             <h2>Add New Habit</h2>
